# techpourtoutes

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Procfile  README.md  conftest.py  deploy.sh  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  scalingo.json
.claude/: settings.local.json
.github/workflows/: ci.yml  review-app-deploy.yml  review-app-destroy.yml
api/: urls.py  views.py
api/clients/: base.py  jobirl.py
api/services/: base.py  jobirl.py
api/tests/: conftest.py  test_jobirl.py
conf/: celery.py  context_processors.py  settings.py  urls.py  urls_beneficiary.py
data/: higher_ed_schools.csv
techpourtoutes/: admin.py  apps.py  forms.py  mailers.py  middleware.py  ratelimit.py  signals.py  sitemaps.py  tests.py  text.py  urls.py  urls_beneficiary.py  urls_coalition.py  urls_common.py
techpourtoutes/admin/: __init__.py  conf.py  filters.py  stats.py
techpourtoutes/clients/: base.py  brevo.py  jobirl.py  n8n.py
techpourtoutes/forms/: __init__.py  account.py  account_edit_form.py  communication_form.py  delete_account_form.py  email_change_code_form.py  email_change_form.py  login_request_form.py  manifeste_signature_form.py  mentor.py  pro.py  pro_form.py  training_ambassador_form.py  training_experience_form.py  validators.py  verification_code_form.py  workshop_form.py
techpourtoutes/mailers/: __init__.py  auth_mailer.py  base_mailer.py  coalition_internal_mailer.py  coalition_user_mailer.py
techpourtoutes/migrations/: 0001_initial.py  0002_alter_mentor_professional_situation.py  0002_remove_mentor_birth_date_and_more.py  0003_mentor_jobirl_user_id_mentor_jobirl_user_token.py  0003_user_login_token_expires_at_user_login_token_hash.py  0004_alter_user_login_token_expires_at_and_more.py  0004_mentor_address_mentor_birth_date_mentor_city_and_more.py  0005_add_structure_fields_to_mentor.py  0005_remove_mentor_city.py  0006_user_brevo_sync_enabled.py  0007_rename_mentor_pro.py  0008_alter_pro_options.py  0009_add_pro_engagements.py  0010_alter_pro_engagements_and_more.py  0011_school_pro_structure_id_alter_pro_engagements_and_more.py  0012_school_name_normalized.py  0013_alter_user_email.py  0014_alter_pro_postal_code_workshoprequest.py  0015_alter_pro_professional_situation.py  0016_alter_pro_engagements.py  0017_higheredschool.py  0018_trainingexperience.py  0019_alter_pro_postal_code.py  0020_alter_pro_job_title.py  0021_add_faveod_id_to_pro.py  0022_alter_user_brevo_sync_enabled.py  0023_alter_pro_managers_alter_user_managers_and_more.py  0024_user_email_change_attempts_and_more.py  0025_user_email_change_code_expires_at_and_more.py
techpourtoutes/models/: __init__.py  base.py  higher_ed_school.py  mentor.py  pro.py  school.py  training_experience.py  user.py  workshop_request.py
techpourtoutes/services/: base.py  create_mentor.py  soft_delete_account.py  sync_brevo_contact.py  upsert_manifeste_signatory.py  (+1 more)
ui/: source.css
(+233 files in other folders)
