[project]
name = "conf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "brevo-python>=4.0.10",
  "celery>=5.6.3",
  "django>=6.0.4",
  "django-anymail[brevo]>=15",
  "django-cotton>=2.6.2",
  "django-environ>=0.13",
  "django-extensions>=4.1",
  "django-phonenumber-field>=8.4",
  "django-simple-history>=3.11",
  "django-tailwind-cli>=4.6",
  "gunicorn>=25.3",
  "httpx>=0.28.1",
  "ipython>=9.12",
  "phonenumberslite>=9.0.29",
  "psycopg2>=2.9.12",
  "redis>=7.4",
  "sentry-sdk[celery,django]>=2.60",
  "whitenoise>=6.12",
]

[dependency-groups]
dev = [
  "pre-commit>=4.6",
  "pytest>=9.0.3",
  "pytest-cov>=7.1",
  "pytest-django>=4.12",
  "pytest-httpx>=0.36.2",
  "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py314"
line-length = 99
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "migrations",
]
# Règles activées :
# E/W = erreurs de style (PEP8)
# F   = erreurs logiques (variables inutilisées, imports manquants...)
# I   = tri des imports (comme isort)
# DJ  = règles spécifiques à Django !
lint.select = [ "DJ", "E", "F", "I", "W" ]
lint.ignore = []
lint.isort.known-first-party = [ "conf", "techpourtoutes", "ui" ]

[tool.pytest]
ini_options.DJANGO_SETTINGS_MODULE = "conf.settings"
ini_options.testpaths = [ "techpourtoutes" ]
ini_options.python_files = [ "test_*.py" ]
ini_options.addopts = "--cov=techpourtoutes --cov-report=term-missing"
ini_options.filterwarnings = [ "ignore::UserWarning:django.core.handlers.base" ]

[tool.coverage]
run.omit = [
  "techpourtoutes/management/*",
  "techpourtoutes/migrations/*",
]
